# GeraNES

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  build.sh  readme.md  settings.json  template.html
android/: README.md  build-config.example.jsonc  settings.gradle
android/app/: build.gradle  proguard-rules.pro
cmake/: FindMbedTLS.cmake  SyncManagedTree.cmake  mbedtls_user_config.h
data/: db.txt
data/palettes/: ASQ_Reality_A.json  ASQ_Reality_B.json  BMF_Final_2.json  BMF_Final_3.json  Composite_Direct.json  Digital_Prime.json  FCEUX_Default.json  FCEU_13_Default_Nitsuja.json  FCEU_15_Nitsuja_New.json  Magnum.json  NES_Classic.json  NRS_NTSC.json  NRS_PAL.json  Nestopia_RGB.json  Nestopia_YUV.json  PVM_Style_D93.json  PlayChoice-10.json  Smooth_V2.json  Sony_CXA2025AS_US.json  Unsaturated_V6.json  Wavebeam.json  r57shell_PAL.json
data/shaders/: 4xScaleHQ.glsl  4xsoft.glsl  4xsoftSdB.glsl  crt-geom.glsl  ntsc.glsl
docs/internal/: INPUT_BUFFER.md  NETPLAY.md  PERFORMANCE_IMPROVEMENT_PLAN.md
docs/user-guide/: build.ps1  mkdocs.yml
emscripten/: Emscripten.cmake
libretro/: Makefile  README.md  gen_embedded_db.py  geranes_libretro.info
resources/: 4xScaleHQ.glsl  default.glsl  touch-layout.json
src/: AppBootstrap.cpp  AppBootstrap.h  ControllerConfigWindow.h  CrashHandler.cpp  CrashHandler.h  GeraNESApp.h  HealthCheck.h  NetplayTest.h  ResimulationTest.h  SDLOpenGLWindow.h  SDLUtil.h  StateReplayTest.h  Test.h  main.cpp  resources.rc
src/ConsoleNetplay/: ConfirmedInputBufferDriver.cpp  ConfirmedInputBufferDriver.h  DesyncMonitor.cpp  DesyncMonitor.h  Diagnostics.cpp  Diagnostics.h  INetplayConsole.h  INetplayRuntimeHost.h  InputTimeline.cpp  InputTimeline.h  NetProtocol.cpp  NetProtocol.h  NetSerialization.h  NetSession.cpp  NetSession.h  NetTransport.cpp  NetTransport.h  NetplayAppRuntime.cpp  NetplayAppRuntime.h  NetplayAutoTune.cpp  NetplayAutoTune.h  NetplayConfig.h  NetplayCoordinator.cpp  NetplayCoordinator.h  NetplayCrc32.h  NetplayInputAssignment.cpp  NetplayInputAssignment.h  NetplayInputFrame.h  NetplayInputFrameSerialization.cpp  NetplayInputFrameSerialization.h  NetplayInputState.h  NetplayLog.cpp  NetplayLog.h  NetplayRuntime.cpp  NetplayRuntime.h  NetplayRuntimeDriver.h  NetplayRuntimeHostApply.h  NetplayRuntimeSupport.cpp  NetplayRuntimeSupport.h  NetplayRuntimeTypes.h  (+17 more)
src/CppGL/: CppGL.h  GLFrameBuffer.h  GLHeaders.h  GLShaderProgram.h  GLTexture.h  GLVertexArrayObject.h  GLVertexBufferObject.h  Loader.h
src/GeraNES/: APU.h  AccuracyTrace.h  ArkanoidControllerFamicom.h  ArkanoidControllerNes.h  BandaiHyperShot.h  CPU2A03.h  CPU2A03Debug.h  Cartridge.h  Console.h  Controller.h  DMA.h  DMA.inl  Db.h  FamicomController.h  FamicomExpansionStandardController.h  FamilyBasicKeyboard.h  FamilyTrainer.h  FourScore.h  GameDatabase.h  GeraNESEmu.h  HardwareActions.h  HoriAdapter.h  HoriAdapterFamicom.h  IAudioOutput.h  IBus.h  IControllerPortDevice.h  IExpansionDevice.h  IRewindable.h  InputBuffer.h  InputFrame.cpp  InputFrame.h  InputState.h  InputState.inl  InputTopology.h  KonamiHyperShot.h  Logger.h  MirroringType.h  NesStandardController.h  NsfPlayer.h  PPU.h  (+15 more)
src/GeraNESApp/: AndroidFileDialog.cpp  AndroidFileDialog.h  AppSettings.cpp  AppSettings.h  AudioGenerator.h  AudioOutputBase.cpp  AudioOutputBase.h  ConfigFile.cpp  ConfigFile.h  ControllerConfigWindow.h  ControllerInfo.h  EmscriptenBindings.cpp  EmscriptenFileDialog.cpp  EmscriptenFileDialog.h  EmscriptenProcessFile.cpp  EmscriptenUtil.cpp  EmscriptenUtil.h  EmulationHost.h  FontAwesomeIcons.h  GeraNESApp.AboutWindowUI.inl  GeraNESApp.ArkanoidFamicomConfigWindowUI.inl  GeraNESApp.ArkanoidNesConfigWindowUI.inl  GeraNESApp.CpuBreakpointsWindowUI.inl  GeraNESApp.CpuDebugSharedUI.inl  GeraNESApp.CpuDebuggerWindowUI.inl  GeraNESApp.CustomWindowChromeUI.inl  GeraNESApp.ErrorWindowUI.inl  GeraNESApp.EventViewerWindowUI.inl  GeraNESApp.ImprovementsWindowUI.inl  GeraNESApp.InputMiniaturesOverlayUI.inl  GeraNESApp.LogWindowUI.inl  GeraNESApp.MemoryCompareWindowUI.inl  GeraNESApp.MemoryViewerEditPopupUI.inl  GeraNESApp.MemoryViewerWindowUI.inl  GeraNESApp.MenuUI.inl  GeraNESApp.ModPixelInspectorWindowUI.inl  GeraNESApp.NsfPlayerVisualizerUI.inl  GeraNESApp.NsfPlayerWindowUI.inl  GeraNESApp.OverscanWindowUI.inl  GeraNESApp.PaletteWindowUI.inl  (+65 more)
src/GeraNESNetplay/: ConfirmedInputBufferDriver.cpp  ConfirmedInputBufferDriver.h  DesyncMonitor.cpp  DesyncMonitor.h  Diagnostics.cpp  Diagnostics.h  GeraNESInputFrameAdapter.cpp  GeraNESInputFrameAdapter.h  GeraNESInputState.h  GeraNESNetplayAdapters.cpp  GeraNESNetplayAdapters.h  GeraNESNetplayAppRuntime.cpp  GeraNESNetplayAppRuntime.h  GeraNESNetplayAssignmentHelpers.cpp  GeraNESNetplayAssignmentHelpers.h  GeraNESNetplayConsole.cpp  GeraNESNetplayConsole.h  GeraNESNetplayMenuHelpers.cpp  GeraNESNetplayMenuHelpers.h  GeraNESNetplayRuntimeDriver.cpp  GeraNESNetplayRuntimeDriver.h  GeraNESNetplayRuntimeGlue.cpp  GeraNESNetplayRuntimeGlue.h  GeraNESNetplaySlots.h  GeraNESNetplayUIHelpers.cpp  GeraNESNetplayUIHelpers.h  HostStallDetector.cpp  HostStallDetector.h  ImplicitStallRecoveryMonitor.cpp  ImplicitStallRecoveryMonitor.h  InputTimeline.cpp  InputTimeline.h  NetProtocol.h  NetSerialization.h  NetSession.cpp  NetSession.h  NetTransport.cpp  NetTransport.h  NetplayAppRuntime.cpp  NetplayAppRuntime.h  (+35 more)
src/GeraNes/: APU.h  CPU2A03.h  Cartridge.h  DMA.h  GeraNesEmu.h  IAudioOutput.h  IBus.h  Logger.h  PPU.h  Serialization.h  Settings.h  defines.h
src/GeraNesUI/: AudioGenerator.h  AudioOutput.h  ConfigFile.h  GeraNESApp.h  (+10 more)
tests/: NetplayTests.cpp  README.md  ResimulationTests.cpp  StateReplayTests.cpp  SuspendTests.cpp  TestConfig.h.in  TestSupport.h
tools/: analyze_healthcheck.py  build_release.py  check_rom_mappers.py  create_version_tag.sh  find_roms_by_mapper.py  generate_mapper_coverage.py  geranes_test_report.html  geranes_test_report.json  geranes_test_report.md  geranes_web_threads.htaccess  mapper_coverage.html  run_geranes_tests.py  run_selected_tests.sh  serve_web_threads.py  test_pass_expectations.json  update_reports.sh
(+517 files in other folders)
